2010-11-24  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_extobjbase
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_extmgm
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_extfilefunc
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_exec
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_exception
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_diff
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_db
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_cs
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_compressor
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_clipboard
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_cli
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_cache
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_browsetree
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_beuserauth

2010-11-23  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_befunc
	* Fixed bug #16545: befunc helpText use wrong variable
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_bedisplaylog
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_basicfilefunc
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_autoloader
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_arraybrowser
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_ajax
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_admin
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - gzip_encode
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_div
	* Follow-up to #16495: conf.php files aren't corrected when installing extensions

2010-11-23  Steffen Ritter  <typo3@steffen-ritter.net>
